--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
     text-align: center;
     color:white;
   }
+
   .CVC-code {
     position: absolute;
     font-size: 0.75rem;
@@ -85,24 +86,14 @@
     bottom: 20px;
     font-size: 0.65rem;
   }
-  #top {
+  #top, #bottom {
     position: absolute;
-    top:26px;
-    right: 20px;
-  }
-  #bottom{
-    position: absolute;
-    bottom:-45px;
-    /* left:20px; */
-    right: 70px;
   }
   .User-input {
-    padding: 1.5rem; 
     color:hsl(278, 68%, 11%);
-    /* display: none; */
-  }
-  .cardholder {
-    margin-top: 3.5rem;
+    position: absolute;
+    right: -8rem;
+
   }
   .date-cvc-flex {
     width: 100%;
@@ -125,6 +116,22 @@
     padding-left: 1rem;
     margin-top: 6px;
   } 
+  .error  {
+    position: absolute;
+    top:22.2rem;
+    color:hsl(0, 100%, 66%);
+    font-size: 0.65rem;
+    font-weight: 600;
+  }
+  #errorchild { 
+    top:28.3rem;
+  }
+  #errorYM, #errorCVC { 
+    top:34rem;
+  }
+  #errorCVC  { 
+    right:425px;
+  }
   /* .es { */
     /* margin-left: 1rem; */
     /* margin-top: 0.4rem; */
